--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,128 @@
 *{
-    padding: 0;
-    margin: 0;
+   margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
+   border: border-box;
 }
+
+.navbar{
+    height: 60px;
+    background-color: #0f1111;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.logo{
+    background-image: url('./amazon_logo.png');
+    height: 50px;
+    width: 100%;
+ background-size:100% 100%;
+
+}
+
+.nav-logo{
+    height: 50px;
+    width: 100px;
+}
+
+ .border{
+    border: 2px solid transparent;
+} 
+
+.border:hover{
+    border: 2px solid white;
+}
+
+/* Box-2 */
+.add-first{
+    color: #cccccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+
+.add-second{
+   font-size: 1rem;
+   margin-left: 5px;
+}
+
+.add-icon{
+    display: flex;
+    align-items: center;
+}
+
+
+
+/* Box-3 */
+
+.nav-search{
+ display: flex;
+ justify-content: space-evenly;
+ background-color: pink;
+ margin-left: 5px;
+ width: 620px;
+ height: 40px;
+ border-radius: 4px;
+}
+
+.search-select{
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    background-color: rgb(239, 185, 6);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
+}
+
+.nav-search{
+    border: 2px solid orange;
+}
+
+/* Box-4 */
+span{
+    font-size: 0.7rem;
+}
+
+.nav-second{
+    font-size: 0.85rem;
+    font-weight:700 ;
+}
+
+.nav-second{
+    font-size: 0.85rem;
+    font-weight:700 ;
+}
+
+/* Box-6 */
+
+
+.nav-cart i{
+   font-size: 30px;
+}
+
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: 700;
+    text-align: center;
+    display: flex;
+}
+
+
